solutions/multicontainer-review/famous-quotes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: famous-quotes
spec:
  selector:
    app: famous-quotes
  ports:
    - port: 443
      targetPort: 8080
      name: https
