solutions/multicontainer-review/famous-quotes/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: famous-quotes
spec:
  host: famous-quotes-multicontainer-review.apps.lab.example.com
  port:
    targetPort: https
  to:
    kind: Service
    name: famous-quotes
